<resources>
    <string name="app_name">My Application</string>
    <string name="base_stats">Base Stats</string>
    <string name="weight">Weight</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
    <string name="name">NAME</string>
    <string name="height">Height</string>
</resources>